added whatsapp icon, changed color of logo

--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    
 			    <!--Replace text with your app name or logo image-->
-			    <a class="navbar-brand" href="#">Delia Erbach</a>
+			    <a onclick="$('.header').animatescroll({padding:71});" class="navbar-brand">Delia Erbach</a>
 			    <img src="img/logo_pferd_springend.svg" class="navbar-logo"/>
-			    
 			  </div>
 			  <div class="collapse navbar-collapse navbar-ex1-collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a onclick="$('.detail').animatescroll({padding:71});">Über mich</a></li>
+			      <li><a onclick="$('.horsemanship').animatescroll({padding:71});">Bodenarbeit</a></li>
 			      <li><a onclick="$('.features').animatescroll({padding:71});">Leistungen</a></li>
 			      <li><a onclick="$('.kontakt').animatescroll({padding:71});">Kontakt</a></li>
 			      <li><a onclick="$('.impressum').animatescroll({padding:71});">Impressum</a></li>
@@ -47,7 +46,7 @@
 	  
 	   <!-- HEADER
 	   ================================================== -->	  
-	  <header>
+	  <header class="header">
 		 <div class="container">
 			 <div class="row">
 				 <div class="col-md-12">
@@ -185,7 +184,7 @@
 	  			  	<h2>Kontaktiere mich</h2>
 	  			  	<p><a class="icon-mail" href="mailto:delia.erbach@gmail.com"> delia.erbach@gmail.com</a></p>
 	  			   	<p><a class="icon-facebook" href="https://www.facebook.com/delia.erbach"> facebook.com/delia.erbach</a></p>
-	  			   	<p><a class="icon-chat" href="tel:+491794162831"> 0179 41 62 831</a></p>
+	  			   	<p><a href="tel:+491794162831"><img src="img/icon_whatsapp.svg" class="icon-whatsapp"/> 0179 41 62 831</a></p>
 					</div>
 	  		  </div>
 	  	  </div>	  
